# website

./: main.py  pyproject.toml  render.yaml
app/: logger.py
app/routers/: __init__.py  graph.py  main.py  wiki.py
app/routers/api/: __init__.py  login.py  users.py
app/schemas/: user.py
app/services/: db.py  github_service.py  login.py  neon.py
app/static/css/: graph.css  index.css  project.css  style.css  wiki.css
app/static/js/: graph.js  index.js
app/templates/: 404.html  base.html  graph.html  index.html
app/templates/components/: project.html
app/templates/wiki/: frontend.html  love.html  pingbot.html  scraper.html
